--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.0
 Imports:
     data.table
+URL: https://github.com/dvg-p4/DataTableAwareTestPkg
+BugReports: https://github.com/dvg-p4/DataTableAwareTestPkg/issues
